--- a/catalog.html
+++ b/catalog.html
@@ -169,7 +169,7 @@
               <label class="filters-parameter" for="nofat">0%</label>
             </li>
             <li class="filter-option filter-radio">
-              <input class="visually-hidden filter-radio-input" checked="checked" type="radio" name="fat" id="light" />
+              <input class="visually-hidden filter-radio-input" type="radio" name="fat" id="light" checked />
               <label class="filters-parameter" for="light">до 10%</label>
             </li>
             <li class="filter-option filter-radio">
@@ -186,11 +186,11 @@
           <legend class="filters-name">Наполнители:</legend>
           <ul class="filters-type-list">
             <li class="filter-option filter-checkbox">
-              <input class="visually-hidden filter-checkbox-input" checked="checked" type="checkbox" name="name" id="chocolate" />
+              <input class="visually-hidden filter-checkbox-input" type="checkbox" name="name" id="chocolate" checked/>
               <label class="filters-parameter" for="chocolate">шоколадные</label>
             </li>
             <li class="filter-option filter-checkbox">
-              <input class="visually-hidden filter-checkbox-input" checked="checked" type="checkbox" name="name" id="sugar" />
+              <input class="visually-hidden filter-checkbox-input" type="checkbox" name="name" id="sugar" checked/>
               <label class="filters-parameter" for="sugar">сахарные присыпки</label>
             </li>
             <li class="filter-option filter-checkbox">
@@ -303,16 +303,16 @@
 
     <div class="pagination container">
       <ul class="pagination-list">
-        <li class="pagination-item-previous"><a href="#"></a></li>
-        <li class="pagination-item"><a href="#">1</a></li>
-        <li class="pagination-item"><a href="#">2</a></li>
-        <li class="pagination-item"><a href="#">3</a></li>
-        <li class="pagination-item"><a href="#">4</a></li>
-        <li class="pagination-item"><a href="#">5</a></li>
-        <li class="pagination-item-next"><a href="#"></a></li>
+        <li class="pagination-item-previous"><a  href="#"></a></li>
+        <li><a class="pagination-item selected" href="#">1</a></li>
+        <li><a class="pagination-item" href="#">2</a></li>
+        <li><a class="pagination-item" href="#">3</a></li>
+        <li><a class="pagination-item" href="#">4</a></li>
+        <li><a class="pagination-item" href="#">5</a></li>
+        <li class="pagination-item-next"><a  href="#"></a></li>
       </ul>
     </div>
-  </main>
+    </main>
 
   <footer class="container footer footer-line">
 
