--- a/index.html
+++ b/index.html
@@ -159,35 +159,30 @@
     <section class="catalog-hits container">
       <h2 class="visually-hidden">Хиты продаж мороженого</h2>
       <ul class="catalog-list">
-        <li class="catalog-item">
+        <li class="catalog-item catalog-item-hit">
           <div class="catalog-item-ice catalog-item-orange">
             <p>310 &#8381;<span>/кг</span></p>
-            <div class="catalog-item-hit"></div>
-
           </div>
           <h3>Сливочное с апельсиновым джемом и цитрусовой стружкой</h3>
           <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
-        <li class="catalog-item">
+        <li class="catalog-item catalog-item-hit">
           <div class="catalog-item-ice catalog-item-coffee">
             <p>380 &#8381;<span>/кг</span></p>
-            <div class="catalog-item-hit"></div>
           </div>
           <h3>Сливочно-кофейное с кусочками шоколада</h3>
           <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
-        <li class="catalog-item">
+        <li class="catalog-item catalog-item-hit">
           <div class="catalog-item-ice catalog-item-strawberry">
             <p>355 &#8381;<span>/кг</span></p>
-            <div class="catalog-item-hit"></div>
           </div>
           <h3>Сливочно-клубничное с присыпкой из белого шоколада</h3>
           <a class="button btn-ice" href="#">Быстрый просмотр</a>
         </li>
-        <li class="catalog-item">
+        <li class="catalog-item catalog-item-hit">
           <div class="catalog-item-ice catalog-item-brulee">
             <p>415 &#8381;<span>/кг</span></p>
-            <div class="catalog-item-hit"></div>
           </div>
           <h3>Сливочное крем-брюле с карамельной подливкой</h3>
           <a class="button btn-ice" href="#">Быстрый просмотр</a>
@@ -253,23 +248,26 @@
   </div>
 
     <section class="contact">
-
       <h2 class="visually-hidden">Где мы находимся?</h2>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.60362530567!2d30.320853351673644!3d59.93871916896525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1593637858210!5m2!1sru!2sby" width="100%" height="430">
+      </iframe>
       <div class="container contact-inner">
-        <img class="contact-img" src="./img/main/pin.png" alt="Месторасположение магазина мороженого" width="80" height="140">
+
 
         <div  class="contact-info">
           <h2 class="visually-hidden">Наш адрес</h2>
-          <p class="contact-info-headquoter">Адрес главного офиса </br> и офлайн-магазина:</p>
-          <a class="contact-info-adress">ул. Большая Конюшенная, 19/8, Санкт-Петербург</a>
-          <p class="contact-order-phone">Для заказов по телефону:</p>
-          <a class="contact-phone-number" href="tel:88124502525">8 812 450-25-25</a>
-          <p class="contact-schedule">(с 10 до 20 ежедневно)</p>
+          <div>
+            <p class="contact-info-title">Адрес главного офиса </br> и офлайн-магазина:</p>
+            <a class="contact-info-subtitle">ул. Большая Конюшенная, 19/8, Санкт-Петербург</a>
+          </div>
+          <div>
+            <p class=" contact-info-title">Для заказов по телефону:</p>
+            <a class="contact-info-subtitle" href="tel:88124502525">8 812 450-25-25</a>
+            <p class="contact-schedule">(с 10 до 20 ежедневно)</p>
+          </div>
           <button class="button btn-contact">Форма обратной связи</button>
         </div>
       </div>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.60362530567!2d30.320853351673644!3d59.93871916896525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1593637858210!5m2!1sru!2sby" width="100%" height="430">
-      </iframe>
     </section>
   </main>
 
