Fix by comments

--- a/catalog.html
+++ b/catalog.html
@@ -164,19 +164,19 @@
         <fieldset>
           <legend class="filters-name">Жирность</legend>
           <ul class="filters-fat-list">
-            <li class="filter-option filter-radio">
+            <li class="filter-radio">
               <input class="visually-hidden filter-radio-input" type="radio" name="fat" id="nofat" />
               <label class="filters-parameter" for="nofat">0%</label>
             </li>
-            <li class="filter-option filter-radio">
+            <li class="filter-radio">
               <input class="visually-hidden filter-radio-input" type="radio" name="fat" id="light" checked />
               <label class="filters-parameter" for="light">до 10%</label>
             </li>
-            <li class="filter-option filter-radio">
+            <li class="filter-radio">
               <input  class="visually-hidden filter-radio-input" type="radio" name="fat" id="medium" />
               <label class="filters-parameter" for="medium">до 30%</label>
             </li>
-            <li class="filter-option filter-radio">
+            <li class="filter-radio">
               <input class="visually-hidden filter-radio-input" type="radio" name="fat" id="hight" />
               <label class="filters-parameter" for="hight">выше 30%</label>
             </li>
@@ -185,23 +185,23 @@
         <fieldset>
           <legend class="filters-name">Наполнители:</legend>
           <ul class="filters-type-list">
-            <li class="filter-option filter-checkbox">
+            <li class="filter-checkbox">
               <input class="visually-hidden filter-checkbox-input" type="checkbox" name="name" id="chocolate" checked/>
               <label class="filters-parameter" for="chocolate">шоколадные</label>
             </li>
-            <li class="filter-option filter-checkbox">
+            <li class="filter-checkbox">
               <input class="visually-hidden filter-checkbox-input" type="checkbox" name="name" id="sugar" checked/>
               <label class="filters-parameter" for="sugar">сахарные присыпки</label>
             </li>
-            <li class="filter-option filter-checkbox">
+            <li class="filter-checkbox">
               <input class="visually-hidden filter-checkbox-input" type="checkbox" name="name" id="fruits" />
               <label class="filters-parameter" for="fruits">фрукты</label>
             </li>
-            <li class="filter-option filter-checkbox">
+            <li class="filter-checkbox">
               <input class="visually-hidden filter-checkbox-input" type="checkbox" name="name" id="syrup" />
               <label class="filters-parameter" for="syrup">сиропы</label>
             </li>
-            <li class="filter-option filter-checkbox">
+            <li class="filter-checkbox">
               <input class="visually-hidden filter-checkbox-input" type="checkbox" name="name" id="jams" />
               <label class="filters-parameter" for="jams">джемы</label>
             </li>
