--- a/index.html
+++ b/index.html
@@ -251,19 +251,21 @@
       <h2 class="visually-hidden">Где мы находимся?</h2>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.60362530567!2d30.320853351673644!3d59.93871916896525!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sby!4v1593637858210!5m2!1sru!2sby">
       </iframe>
-      <div class="contact-inner">
-        <div  class="contact-info">
-          <h2 class="visually-hidden">Наш адрес</h2>
-          <div>
-            <p class="contact-info-title">Адрес главного офиса <br> и офлайн-магазина:</p>
-            <a class="contact-item-value">ул. Большая Конюшенная, 19/8, Санкт-Петербург</a>
+      <div class="contact-wrapper">
+        <div class="container contact-inner">
+          <div  class="contact-info">
+            <h2 class="visually-hidden">Наш адрес</h2>
+            <div>
+              <p class="contact-info-title">Адрес главного офиса <br> и офлайн-магазина:</p>
+              <a class="contact-item-value">ул. Большая Конюшенная, 19/8, Санкт-Петербург</a>
+            </div>
+            <div>
+              <p class=" contact-info-title">Для заказов по телефону:</p>
+              <a class="contact-item-value" href="tel:88124502525">8 812 450-25-25</a>
+              <p class="contact-schedule">(с 10 до 20 ежедневно)</p>
+            </div>
+            <button class="button btn-contact">Форма обратной связи</button>
           </div>
-          <div>
-            <p class=" contact-info-title">Для заказов по телефону:</p>
-            <a class="contact-item-value" href="tel:88124502525">8 812 450-25-25</a>
-            <p class="contact-schedule">(с 10 до 20 ежедневно)</p>
-          </div>
-          <button class="button btn-contact">Форма обратной связи</button>
         </div>
       </div>
     </section>
