Fix by comments

--- a/catalog.html
+++ b/catalog.html
@@ -162,7 +162,11 @@
             <span class="filters-name-price">Цена: 100 &#8381; - 500 &#8381;</span>
           </legend>
           <div class="filters-price-slider">
-            <div class="filters-price-slider-inner"></div>
+              <div class="scale">
+                <div class="bar"></div>
+              <div class="toggle toggle-min" tabindex="0"></div>
+              <div class="toggle toggle-max" tabindex="0"></div>
+            </div>
           </div>
         </fieldset>
         <fieldset>
