--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
       <h2 class="visually-hidden">Реклама</h2>
       <article class="news-item">
         <p class="news-item-title">Новое в нашем блоге</p>
-        <a class="news-item-link">10 способов сервировки фруктовых щербетов </br>к столу</a>
+        <a class="news-item-link">10 способов сервировки фруктовых щербетов <br>к столу</a>
       </article>
     </section>
 
