--- a/catalog.html
+++ b/catalog.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <title>HTML Academy: Глейси</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/normalize.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/normalize.min.css">
+  <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
 <body class="page-body">
@@ -446,7 +446,7 @@
         </p>
       </section>
       </footer>
-      <script src="index.js"></script>
+      <script src="./js/index.min.js"></script>
 </body>
 
 </html>
