--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <title>HTML Academy: Глейси</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/normalize.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/normalize.min.css">
+  <link rel="stylesheet" href="./css/style.min.css">
 </head>
 
 <body class="page-body main-slide-first" id="slide-background">
@@ -383,7 +383,7 @@
       <button class="button btn-feedback" type="submit">Отправить</button>
     </form>
   </div>
-  <script src="index.js"></script>
+  <script src="./js/index.min.js"></script>
 </body>
 
 </html>
