--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
 <body class="page-body">
   <header class="main-header container">
     <nav class="main-nav">
-      <a class="main-logo" href="index.html" >
+      <a class="main-logo" href="index.html">
         <img src="img/header/logo.svg" alt="Логотип магазина мороженого Глейси" width="154" height="64">
       </a>
       <ul class="nav-list">
@@ -40,7 +40,7 @@
           <a class="nav-list-item" href="#">Доставка и оплата</a>
         </li>
         <li>
-          <a class="nav-list-item" href="#company">О компании</a>
+          <a class="nav-list-item" href="#">О компании</a>
         </li>
       </ul>
     </nav>
@@ -84,7 +84,7 @@
 
     <section class="order">
       <h2 class="visually-hidden">Форма для оформления заказа</h2>
-      <a class="btn-basket-order" href="#" >
+      <a class="btn-basket-order" href="#">
         <svg width="21" height="20" viewBox="0 0 21 20" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M7.03359 20C8.14664 20 9.04894 19.1046 9.04894 18C9.04894 16.8954 8.14664 16 7.03359 16C5.92054 16 5.01823 16.8954 5.01823 18C5.01823 19.1046 5.92054 20 7.03359 20Z" fill="#343434"/>
           <path d="M16.1027 20C17.2157 20 18.118 19.1046 18.118 18C18.118 16.8954 17.2157 16 16.1027 16C14.9896 16 14.0873 16.8954 14.0873 18C14.0873 19.1046 14.9896 20 16.1027 20Z" fill="#343434"/>
@@ -132,7 +132,7 @@
       <div class="path">
         <a class="path-item" href="index.html">Главная</a>
         <a class="path-item" href="catalog.html">Каталог</a>
-        <a href="">Сливочное</a>
+        <a href="#">Сливочное</a>
       </div>
     <section class="schedule">
       <h2 class="visually-hidden">Режим работы</h2>
