--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <a class="nav-list-item " href="#">Доставка и оплата</a>
         </li>
         <li>
-          <a class="nav-list-item" href="#company">О компании</a>
+          <a class="nav-list-item" href="#">О компании</a>
         </li>
       </ul>
     </nav>
@@ -244,7 +244,7 @@
       <h2 class="visually-hidden">Реклама</h2>
       <article class="news-item">
         <p class="news-item-title">Новое в нашем блоге</p>
-        <a class="news-item-link">10 способов сервировки фруктовых щербетов <br>к столу</a>
+        <a class="news-item-link" href="#">10 способов сервировки фруктовых щербетов <br>к столу</a>
       </article>
     </section>
 
@@ -275,14 +275,14 @@
         <h2 class="visually-hidden">Наш адрес</h2>
         <div>
           <p class="contact-info-title">Адрес главного офиса <br> и офлайн-магазина:</p>
-          <a class="contact-item-value">ул. Большая Конюшенная, 19/8, Санкт-Петербург</a>
+          <a class="contact-item-value" href="#">ул. Большая Конюшенная, 19/8, Санкт-Петербург</a>
         </div>
         <div>
           <p class=" contact-info-title">Для заказов по телефону:</p>
           <a class="contact-item-value" href="tel:88124502525">8 812 450-25-25</a>
           <p class="contact-schedule">(с 10 до 20 ежедневно)</p>
         </div>
-        <a class="button btn-contact">Форма обратной связи</a>
+        <a class="button btn-contact" href="feedback.html">Форма обратной связи</a>
       </div>
 
     </section>
